--- a/MiniChallenge8/Storyboards/Base.lproj/Main.storyboard
+++ b/MiniChallenge8/Storyboards/Base.lproj/Main.storyboard
@@ -6,9 +6,16 @@
     <dependencies>
         <deployment identifier="tvOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="pricedown bl.ttf">
+            <string>PricedownBl-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Connection View Controller-->
         <scene sceneID="UIz-UG-D57">
@@ -66,5 +73,70 @@
             </objects>
             <point key="canvasLocation" x="76" y="-423"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="uZk-n8-pfw">
+            <objects>
+                <viewController id="S8v-qt-fMu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kHO-zW-wYu"/>
+                        <viewControllerLayoutGuide type="bottom" id="Uve-DU-KCD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5ac-xg-ZMV">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homeScreen" translatesAutoresizingMaskIntoConstraints="NO" id="2OP-HR-VUO">
+                                <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                            </imageView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IpL-Us-5QP">
+                                <rect key="frame" x="192" y="405" width="1536" height="270"/>
+                            </containerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iCY-Gp-3P7">
+                                <rect key="frame" x="1406" y="891" width="322" height="76"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="iCY-Gp-3P7" secondAttribute="height" multiplier="195:46" id="WR4-cI-LGC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="40"/>
+                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                <state key="normal" title="Start" backgroundImage="Button">
+                                    <color key="titleColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use your phone app to enter the party!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qfR-pN-1FO">
+                                <rect key="frame" x="192" y="891" width="1536" height="76"/>
+                                <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="38"/>
+                                <color key="textColor" red="1" green="0.83921568629999999" blue="0.39652104329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="2OP-HR-VUO" firstAttribute="centerY" secondItem="26V-6g-DTC" secondAttribute="centerY" id="4bv-Dm-IxY"/>
+                            <constraint firstItem="iCY-Gp-3P7" firstAttribute="height" secondItem="2OP-HR-VUO" secondAttribute="height" multiplier="0.07" id="7xG-Mp-9QA"/>
+                            <constraint firstItem="qfR-pN-1FO" firstAttribute="width" secondItem="IpL-Us-5QP" secondAttribute="width" id="8D4-yB-naD"/>
+                            <constraint firstItem="iCY-Gp-3P7" firstAttribute="trailing" secondItem="IpL-Us-5QP" secondAttribute="trailing" id="AXY-n4-OH0"/>
+                            <constraint firstItem="IpL-Us-5QP" firstAttribute="centerY" secondItem="26V-6g-DTC" secondAttribute="centerY" id="Fcc-zb-ql2"/>
+                            <constraint firstItem="2OP-HR-VUO" firstAttribute="height" secondItem="5ac-xg-ZMV" secondAttribute="height" id="Feb-yp-yPB"/>
+                            <constraint firstItem="2OP-HR-VUO" firstAttribute="width" secondItem="5ac-xg-ZMV" secondAttribute="width" id="HDr-Jm-hTd"/>
+                            <constraint firstItem="IpL-Us-5QP" firstAttribute="height" secondItem="5ac-xg-ZMV" secondAttribute="height" multiplier="0.25" id="JzJ-6G-RyQ"/>
+                            <constraint firstItem="IpL-Us-5QP" firstAttribute="width" secondItem="5ac-xg-ZMV" secondAttribute="width" multiplier="0.8" id="LzC-Pc-n53"/>
+                            <constraint firstItem="2OP-HR-VUO" firstAttribute="centerX" secondItem="26V-6g-DTC" secondAttribute="centerX" id="Qdx-xG-Czp"/>
+                            <constraint firstItem="iCY-Gp-3P7" firstAttribute="baseline" secondItem="IpL-Us-5QP" secondAttribute="baseline" multiplier="1.4" id="Wfh-cT-CdS"/>
+                            <constraint firstItem="qfR-pN-1FO" firstAttribute="leading" secondItem="IpL-Us-5QP" secondAttribute="leading" id="ZZF-RO-8js"/>
+                            <constraint firstItem="qfR-pN-1FO" firstAttribute="centerY" secondItem="iCY-Gp-3P7" secondAttribute="centerY" id="bAU-cZ-Be6"/>
+                            <constraint firstItem="qfR-pN-1FO" firstAttribute="height" secondItem="2OP-HR-VUO" secondAttribute="height" multiplier="0.07" id="dZu-Mc-4Jg"/>
+                            <constraint firstItem="IpL-Us-5QP" firstAttribute="centerX" secondItem="26V-6g-DTC" secondAttribute="centerX" id="qe9-8T-1qo"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="26V-6g-DTC"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IET-HF-x7G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="19" y="1297"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="Button" width="390" height="92"/>
+        <image name="homeScreen" width="1920" height="1080"/>
+    </resources>
 </document>
