--- a/MiniChallenge8iOS/Storyboards/Base.lproj/Main.storyboard
+++ b/MiniChallenge8iOS/Storyboards/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tsU-8n-RoG">
-                                <rect key="frame" x="-0.5" y="378.5" width="375" height="67"/>
+                                <rect key="frame" x="-0.5" y="379" width="375" height="66.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <state key="normal" title="Send"/>
                                 <connections>
@@ -93,6 +93,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qe6-ka-TX3"/>
                     </view>
+                    <connections>
+                        <outlet property="waitingLabel" destination="11n-we-13h" id="tbi-f2-Qr4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V3z-FV-VPU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -150,16 +153,89 @@
                     <view key="view" contentMode="scaleToFill" id="U1y-aZ-Zgl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Reaction" translatesAutoresizingMaskIntoConstraints="NO" id="YMg-as-TkC">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YMg-as-TkC" firstAttribute="top" secondItem="U1y-aZ-Zgl" secondAttribute="top" id="5el-SE-aRx"/>
+                            <constraint firstItem="uDZ-Mu-mmR" firstAttribute="trailing" secondItem="YMg-as-TkC" secondAttribute="trailing" id="6YG-9B-29c"/>
+                            <constraint firstAttribute="bottom" secondItem="YMg-as-TkC" secondAttribute="bottom" id="o5d-CS-10q"/>
+                            <constraint firstItem="YMg-as-TkC" firstAttribute="leading" secondItem="uDZ-Mu-mmR" secondAttribute="leading" id="smF-RQ-jfF"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="uDZ-Mu-mmR"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wke-XK-qpf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2686" y="92"/>
+            <point key="canvasLocation" x="2685.5999999999999" y="90.886699507389167"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="isE-Ni-Xnj">
+            <objects>
+                <viewController id="erj-D9-s50" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CHN-Qo-4MW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="escolha seu avatar " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2r-pr-gkU">
+                                <rect key="frame" x="87" y="67" width="210" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="24"/>
+                                <color key="textColor" red="0.99607843137254903" green="0.83529411764705885" blue="0.36470588235294116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oAw-Ub-YUi">
+                                <rect key="frame" x="0.0" y="137" width="375" height="145"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZJE-uV-J4N">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9dv-mI-nmF">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="characterPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="9ov-Li-ZFq">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="9ov-Li-ZFq" firstAttribute="top" secondItem="9dv-mI-nmF" secondAttribute="top" id="IRh-S0-syK"/>
+                                            <constraint firstAttribute="trailing" secondItem="9ov-Li-ZFq" secondAttribute="trailing" id="fbJ-2N-r7X"/>
+                                            <constraint firstItem="9ov-Li-ZFq" firstAttribute="leading" secondItem="9dv-mI-nmF" secondAttribute="leading" id="mz9-0l-ajP"/>
+                                            <constraint firstAttribute="bottom" secondItem="9ov-Li-ZFq" secondAttribute="bottom" id="xhV-Ud-nrc"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B5n-Vx-rSW">
+                                <rect key="frame" x="37" y="104" width="311.5" height="2"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.19215686274509805" green="0.14901960784313725" blue="0.21568627450980393" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Hu0-p4-DBD"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hL4-Ge-h0b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3623.1999999999998" y="92.203898050974516"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Reaction" width="375" height="812"/>
+        <image name="characterPlaceholder" width="143" height="153"/>
         <image name="moneyReactionButton" width="202" height="202"/>
         <image name="reactionScreen" width="375" height="812"/>
         <image name="waitingScreenBackground" width="375" height="812"/>
