--- a/MiniChallenge8/Storyboards/Base.lproj/Main.storyboard
+++ b/MiniChallenge8/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="14113" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S8v-qt-fMu">
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="14109" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S8v-qt-fMu">
     <device id="appleTV" orientation="landscape">
         <adaptation id="light"/>
     </device>
@@ -210,19 +210,37 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rapper4" translatesAutoresizingMaskIntoConstraints="NO" id="9U6-4i-fhx">
                                 <rect key="frame" x="1343" y="284" width="296" height="296"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mc kiko" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8rx-34-Hna">
+                                <rect key="frame" x="206" y="610" width="384" height="63"/>
+                                <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="52"/>
+                                <color key="textColor" red="0.99607843137254903" green="0.83529411764705885" blue="0.36470588235294116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mc seu madruga" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eny-Xe-yse">
+                                <rect key="frame" x="1299" y="610" width="384" height="63"/>
+                                <fontDescription key="fontDescription" name="PricedownBl-Regular" family="Pricedown" pointSize="52"/>
+                                <color key="textColor" red="0.99607843139999996" green="0.83529411760000005" blue="0.36470588240000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="8rx-34-Hna" firstAttribute="width" secondItem="t0w-bx-psI" secondAttribute="width" multiplier="0.2" id="2dA-cd-mzS"/>
                             <constraint firstItem="9U6-4i-fhx" firstAttribute="height" secondItem="SCx-63-0cH" secondAttribute="height" id="4zD-Bg-lsm"/>
                             <constraint firstItem="nFr-pH-AWN" firstAttribute="top" secondItem="SCx-63-0cH" secondAttribute="bottom" constant="451" id="8SV-me-934"/>
                             <constraint firstItem="SCx-63-0cH" firstAttribute="leading" secondItem="JHi-Ug-gCi" secondAttribute="leading" constant="160" id="AGh-7L-4tq"/>
                             <constraint firstItem="JHi-Ug-gCi" firstAttribute="trailing" secondItem="wB7-qU-sw2" secondAttribute="trailing" constant="58" id="CJa-yz-nLl"/>
                             <constraint firstItem="wB7-qU-sw2" firstAttribute="top" secondItem="HvC-rr-NS7" secondAttribute="bottom" constant="-172" id="Dpx-PW-jmX"/>
+                            <constraint firstItem="eny-Xe-yse" firstAttribute="centerX" secondItem="9U6-4i-fhx" secondAttribute="centerX" id="KSY-Vh-IAA"/>
+                            <constraint firstItem="8rx-34-Hna" firstAttribute="centerX" secondItem="SCx-63-0cH" secondAttribute="centerX" id="MaC-bN-0oL"/>
                             <constraint firstItem="HvC-rr-NS7" firstAttribute="top" secondItem="t0w-bx-psI" secondAttribute="top" id="Mrc-bl-rxE"/>
                             <constraint firstItem="wB7-qU-sw2" firstAttribute="height" secondItem="HvC-rr-NS7" secondAttribute="height" multiplier="0.07" id="SaV-68-INa"/>
                             <constraint firstAttribute="trailing" secondItem="HvC-rr-NS7" secondAttribute="trailing" id="UcS-Fe-Dco"/>
+                            <constraint firstItem="eny-Xe-yse" firstAttribute="top" secondItem="9U6-4i-fhx" secondAttribute="bottom" constant="30" id="VPN-7M-ZMs"/>
                             <constraint firstAttribute="bottom" secondItem="HvC-rr-NS7" secondAttribute="bottom" id="eiY-Jm-o40"/>
+                            <constraint firstItem="8rx-34-Hna" firstAttribute="top" secondItem="SCx-63-0cH" secondAttribute="bottom" constant="41" id="fJu-7Y-kOZ"/>
                             <constraint firstItem="SCx-63-0cH" firstAttribute="top" secondItem="I5l-fi-hKP" secondAttribute="bottom" constant="213" id="gvk-Td-Lbc"/>
                             <constraint firstItem="JHi-Ug-gCi" firstAttribute="trailing" secondItem="9U6-4i-fhx" secondAttribute="trailing" constant="191" id="iqE-Co-7bx"/>
+                            <constraint firstItem="eny-Xe-yse" firstAttribute="width" secondItem="t0w-bx-psI" secondAttribute="width" multiplier="0.2" id="mdt-nP-TiV"/>
                             <constraint firstItem="9U6-4i-fhx" firstAttribute="width" secondItem="SCx-63-0cH" secondAttribute="width" id="sgu-YK-2kS"/>
                             <constraint firstItem="HvC-rr-NS7" firstAttribute="leading" secondItem="t0w-bx-psI" secondAttribute="leading" id="tYT-HA-XFd"/>
                             <constraint firstItem="9U6-4i-fhx" firstAttribute="top" secondItem="I5l-fi-hKP" secondAttribute="bottom" constant="224" id="xqJ-Qw-ijI"/>
@@ -231,15 +249,56 @@
                     </view>
                     <connections>
                         <outlet property="player1ImageView" destination="SCx-63-0cH" id="W6E-G9-yqA"/>
+                        <outlet property="player1ImgView" destination="SCx-63-0cH" id="wcw-hs-BES"/>
+                        <outlet property="player1Label" destination="8rx-34-Hna" id="TWK-9V-9Vo"/>
                         <outlet property="player2ImageView" destination="9U6-4i-fhx" id="8O1-TJ-Nt8"/>
+                        <outlet property="player2ImgView" destination="9U6-4i-fhx" id="UOz-yF-Cuv"/>
+                        <outlet property="player2Label" destination="eny-Xe-yse" id="cFs-XX-hQx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zes-3S-0Iz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2745" y="1207"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="WZx-1N-Ofc">
+            <objects>
+                <viewController id="BVG-Aj-JE2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oKr-eX-n0D"/>
+                        <viewControllerLayoutGuide type="bottom" id="U31-Dv-Cql"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1KM-Q3-Dwc">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Battle" translatesAutoresizingMaskIntoConstraints="NO" id="ObC-KM-dUb">
+                                <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogG-ym-puI">
+                                <rect key="frame" x="42" y="42" width="93" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <color key="textColor" red="0.99607843137254903" green="0.83529411764705885" blue="0.36470588235294116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="ObC-KM-dUb" firstAttribute="leading" secondItem="1KM-Q3-Dwc" secondAttribute="leading" id="ASM-3E-7sp"/>
+                            <constraint firstAttribute="bottom" secondItem="ObC-KM-dUb" secondAttribute="bottom" id="F6M-iX-6N3"/>
+                            <constraint firstItem="ObC-KM-dUb" firstAttribute="top" secondItem="1KM-Q3-Dwc" secondAttribute="top" id="sd5-94-lw8"/>
+                            <constraint firstAttribute="trailing" secondItem="ObC-KM-dUb" secondAttribute="trailing" id="u2M-DI-LQm"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Xh5-3A-I7j"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1pv-jf-Kon" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5710" y="1207"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="Battle" width="1920" height="1080"/>
         <image name="Button" width="390" height="92"/>
         <image name="Pre Battle" width="1920" height="1080"/>
         <image name="homeScreen" width="1920" height="1080"/>
