--- a/MiniChallenge8iOS/Storyboards/Base.lproj/Main.storyboard
+++ b/MiniChallenge8iOS/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="erj-D9-s50">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fqd-5o-M7f">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -17,51 +17,6 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Connection View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ConnectionViewController" customModule="MiniChallenge8iOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey everyone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1h-UQ-JU2">
-                                <rect key="frame" x="0.0" y="174" width="375" height="133"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tsU-8n-RoG">
-                                <rect key="frame" x="0.0" y="379" width="375" height="66.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <state key="normal" title="Send"/>
-                                <connections>
-                                    <action selector="didPressSendButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j2e-BL-Xys"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="q1h-UQ-JU2" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="0.7" id="2Od-X9-BMt"/>
-                            <constraint firstItem="tsU-8n-RoG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="3v7-Sy-Ehq"/>
-                            <constraint firstItem="q1h-UQ-JU2" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.2" id="JGS-DZ-xyS"/>
-                            <constraint firstItem="tsU-8n-RoG" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="1.2" id="dKO-a1-PtA"/>
-                            <constraint firstItem="tsU-8n-RoG" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="hEy-cL-J3e"/>
-                            <constraint firstItem="q1h-UQ-JU2" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="rIb-8b-FDU"/>
-                            <constraint firstItem="tsU-8n-RoG" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="s9T-wT-M8O"/>
-                            <constraint firstItem="q1h-UQ-JU2" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="txh-MC-jzd"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                    <connections>
-                        <outlet property="sendButton" destination="tsU-8n-RoG" id="dhJ-Px-h6f"/>
-                        <outlet property="testingLabel" destination="q1h-UQ-JU2" id="0fO-r0-Tea"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="92.203898050974516"/>
-        </scene>
         <!--Waiting View Controller-->
         <scene sceneID="XGG-6W-JU4">
             <objects>
@@ -175,7 +130,7 @@
         <!--Choose Character View Controller-->
         <scene sceneID="isE-Ni-Xnj">
             <objects>
-                <viewController id="erj-D9-s50" customClass="ChooseCharacterViewController" customModule="MiniChallenge8iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="chooseCharacterViewController" modalTransitionStyle="partialCurl" useStoryboardIdentifierAsRestorationIdentifier="YES" id="erj-D9-s50" customClass="ChooseCharacterViewController" customModule="MiniChallenge8iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CHN-Qo-4MW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
